Tue Feb 19 20:41:51 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups.[ch],drivers/mge-xml.[ch]: Sneak preview for the
   new XML driver based on the 'neon' library. Work in progress!

Mon Feb 18 16:07:35 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 * Integrated Power Management (HAL integration) (port from Testing r1309):
   - fix the reporting of the battery technology,
   - fix the reporting of levels by adding a warning and a critical level,
   - report battery granularity,
   - only report the charging status if the battery charge is below 100 %,
   - report the current battery computed state (capacity_state),
   - report battery.alarm.{design,unit}

Sun Feb 17 22:40:34 UTC 2008 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 * drivers/megatec.c:
   - cancel any pending shutdowns soon after detecting the
     UPS to avoid tripping the bogus OFF flag test
   - set datastale() only after 3 failed polling cycles.

Sun Feb 17 19:58:59 UTC 2008 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - data/driver.list: added Unitek Alpha 1250xD and Belkin Active
   Battery Backup BU30 series to the list.

Wed Feb 13 20:51:45 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/libmge-xml.[ch]: fix memory leak in libmge_xml_close(), use
   upsfd to store descriptor for the socket we use for communication
   with the UPS.

Thu Feb 14 08:47:32 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 - man/megatec_usb.8, man/upscode2.8, man/bcmxcp.8, man/bcmxcp_usb.8,
   man/solis.8, man/rhino.8: fix various errors

Wed Feb 13 19:47:32 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/genericups.c: fix previous patch

Wed Feb 13 19:38:44 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/genericups.c: output signal overrides must be handled
   in upsdrv_initups(), since we might go straight to upsdrv_shutdown()
   afterwards.

Wed Feb 13 02:10:27 UTC 2008 / Charles Lepple <clepple@gmail.com>
