@@ -340,9 +340,7 @@ static hid_info_t belkin_hid2nut[] = {
   { "load.off", 0, 0, "UPS.BELKINControls.BELKINDelayBeforeShutdown", NULL, "1", HU_TYPE_CMD, NULL },
   { "load.on", 0, 0, "UPS.BELKINControls.BELKINDelayBeforeStartup", NULL, "1", HU_TYPE_CMD, NULL },
   { "shutdown.stayoff", 0, 0, "UPS.BELKINControls.BELKINDelayBeforeShutdown", NULL, "20", HU_TYPE_CMD, NULL },
-  { "shutdown.return", 0, 0, "UPS.BELKINControls.BELKINDelayBeforeStartup", NULL, "30", HU_TYPE_CMD, NULL },
   { "shutdown.reboot", 0, 0, "UPS.BELKINControls.BELKINDelayBeforeReboot", NULL, "10", HU_TYPE_CMD, NULL },
-  { "shutdown.stop", 0, 0, "UPS.BELKINControls.BELKINDelayBeforeShutdown", NULL, "-1", HU_TYPE_CMD, NULL },
 
   /* Note: on my Belkin UPS, there is no way to implement
      shutdown.return or load.on, even though they should exist in
